--- a/.github/workflows/ci-main.yaml
+++ b/.github/workflows/ci-main.yaml
@@ -14,6 +14,7 @@
 
 name: "Continuous Integration - Main/Release"
 on:
+  workflow_dispatch:
   push:
     # run on pushes to main or release/*
     branches:
